added pipes, data-sharing & crud files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,9 @@
                     <button class="btn btn-outline-primary btn-sm" routerLink="/home">Home</button>&nbsp;
                     <button class="btn btn-outline-primary btn-sm" routerLink="/menu">Menu</button>&nbsp;
                     <button class="btn btn-outline-primary btn-sm" routerLink="/signup">Signup</button>&nbsp;
+                    <button class="btn btn-outline-primary btn-sm" routerLink="/pipes">Pipes</button>&nbsp;
+                    <button class="btn btn-outline-primary btn-sm" routerLink="/interaction">Data Sharing</button>&nbsp;
+                    <button class="btn btn-outline-primary btn-sm" routerLink="/employeeList">CRUD</button>&nbsp;
                 </nav>
             </div>
         </div>
