--- a/src/app/crud/add/add.component.html
+++ b/src/app/crud/add/add.component.html
@@ -1,3 +1,34 @@
-<p>
-  add works!
-</p>
+<h4 class="text-center">Add Employee</h4>
+<div class="row">
+  <div class="container col-sm-6">
+    <form [formGroup]="employee" (ngSubmit)="register()">
+      <div class="form-group">
+        <label class="font-weight-bold">Name:</label>
+        <input type="text" class="form-control" formControlName="name" placeholder="Enter name" />
+      </div>
+      <div class="form-group d-flex align-items-baseline">
+        <label class="font-weight-bold">Gender:</label>&nbsp;&nbsp;
+        <input type="radio" name="gender" value="male" formControlName="gender" />Male&nbsp;&nbsp;
+        <input type="radio" name="gender" value="female" formControlName="gender" />Female
+      </div>
+      <div class="form-group">
+        <label class="font-weight-bold">City:</label>
+        <select class="form-control" formControlName="city">
+          <option value="">Select</option>
+          <option *ngFor="let city of cities" [value]="city">{{city | titlecase}}</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label>
+          <input type="checkbox" formControlName="terms" />
+          I agree terms & conditions.
+        </label>
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary btn-sm">Submit</button>&nbsp;
+        <button type="button" class="btn btn-primary btn-sm" routerLink="/employeeList">Back</button>
+      </div>
+    </form>
+    <!-- <p>{{employee.value | json}}</p> -->
+  </div>
+</div>
