add auth & life cycle hooks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
                     <button class="btn btn-outline-primary btn-sm" routerLink="/pipes">Pipes</button>&nbsp;
                     <button class="btn btn-outline-primary btn-sm" routerLink="/interaction">Data Sharing</button>&nbsp;
                     <button class="btn btn-outline-primary btn-sm" routerLink="/employeeList">CRUD</button>&nbsp;
+                 <button class="btn btn-outline-primary btn-sm" (click)="logout()">Logout</button>&nbsp;
                 </nav>
             </div>
         </div>
